TODO
	* : Implement blur effect, maybe? 
	* : Implement interface to activate urgency hints

2024-01-14
	* dwl-ipc-unstable-v2.xml: add send_action request to allow ipc client to send actions
	* ipc.c: implement send_action request call
	* util/simplewc-msg.c: Allow send_action request call through "--action" flag
	* action.c: add process_ipc_action() function
	* config.c: add LOCK function and lock_cmd entries
	* config/configrc: add lock_cmd entry
	* client.c: ensure the client border follows the surface size (when interactive mode)
	* client.c: Resize XWL client on request_configure event
	* server.c: remove focus on clients not on visible tags when calling arrange_output() (and also fix re-focus)
	* server.c: Implement wlr_gamma_control_manager_v1
	* client.c: Remove unused request_move/request_resize notifiers
	* client.c: Fix broken references when compiling without XWayland support

2024-01-10
	* main.c, Makefile: Change the name from SWC to SimpleWC
	* main.c: Move simple_config out of simple_server struct and make its own global struct

2024-01-09
	* globals.h: Adjust VISIBLEON() macro to remove client->visible flag
	* client.c: Make client cycling work even if all clients are hidden (not visible)
	* client.c: get_client_at() function optimization
	* client.c: focus_client() restacks X11 windows properly to fix ignored mouse focus in dialog boxes
	* client.c: Add XCB hints for XWayland clients

2024-01-05
	* ChangeLog: Adding changelog to track changes
	* input.c: Move input related items from server.c to input.c
	* client.c: implement unmanaged xwayland surfaces
	* action.c: Fix crash when client action is called with no clients
	* config.c, action.c, input.c: implement mouse action
	* input.c: process_cursor_move, process_cursor_resize, check for null client to prevent seg fault when modifier is released during move/resize