@@ -1,0 +1,5 @@
+#!/bin/bash
+
+#waybar &
+
+foot & 
